@@ -24,6 +24,15 @@
 #include <cairomm/enums.h>
 #include <cairomm/types.h>
 #include <cairomm/refptr.h>
+
+/* following is required for OS X */
+
+#ifdef nil
+#undef nil
+#endif
+
+/* end OS X */
+
 #include <sigc++/slot.h>
 #include <cairo.h>
 #ifdef CAIRO_HAS_FT_FONT
